# offtoot

./: .gitignore  README.md  flake.nix  package.nix  pyproject.toml
offtoot/: __init__.py
offtoot/reader/: __init__.py  media.py
offtoot/store/: __init__.py  account.py  config.py  connection.py  lists.py  media.py  post.py
